--- a/views/partials/movie-card.ejs
+++ b/views/partials/movie-card.ejs
@@ -32,10 +32,10 @@
         <!-- Summary counts and Radarr info -->
         <div class="mt-4 space-y-3">
           <div class="flex gap-4 text-sm">
-            <% if (movie.add.length > 0) { %>
+            <% if (movie.add && movie.add.length > 0) { %>
               <span class="px-3 py-1 bg-green-100 text-green-800 rounded">Add: <%= movie.add.length %></span>
             <% } %>
-            <% if (movie.existing.length > 0) { %>
+            <% if (movie.existing && movie.existing.length > 0) { %>
               <span class="px-3 py-1 bg-blue-100 text-blue-800 rounded">
                 Existing: <%= movie.existing.length %>
                 <% if (movie.radarrInfo && movie.radarrInfo.fileName) { %>
@@ -43,8 +43,11 @@
                 <% } %>
               </span>
             <% } %>
-            <% if (movie.upgrade.length > 0) { %>
+            <% if (movie.upgrade && movie.upgrade.length > 0) { %>
               <span class="px-3 py-1 bg-orange-100 text-orange-800 rounded">Upgrade: <%= movie.upgrade.length %></span>
+            <% } %>
+            <% if (movie.ignored && movie.ignored.length > 0) { %>
+              <span class="px-3 py-1 bg-gray-100 text-gray-800 rounded">Ignored: <%= movie.ignored.length %></span>
             <% } %>
           </div>
           
