--- a/views/rss-data.ejs
+++ b/views/rss-data.ejs
@@ -161,42 +161,46 @@
                   <%= new Date(item.published_at).toLocaleString() %>
                 </td>
                 <td class="px-4 py-3 text-sm text-gray-600">
-                  <% if (item.tmdb_id) { %>
-                    <a href="https://www.themoviedb.org/movie/<%= item.tmdb_id %>" target="_blank" class="text-blue-600 hover:underline">
-                      <%= item.tmdb_id %>
-                    </a>
-                  <% } else { %>
-                    -
-                  <% } %>
+                  <div class="flex flex-col gap-1">
+                    <% if (item.tmdb_id) { %>
+                      <a href="https://www.themoviedb.org/movie/<%= item.tmdb_id %>" target="_blank" class="text-blue-600 hover:underline">
+                        <%= item.tmdb_id %>
+                      </a>
+                    <% } else { %>
+                      <span>-</span>
+                    <% } %>
+                    <button 
+                      onclick="overrideTmdbId(<%= item.id %>)" 
+                      class="bg-purple-500 hover:bg-purple-600 text-white px-2 py-1 rounded text-xs w-fit"
+                      title="Override/Update TMDB ID (will persist)"
+                    >
+                      Override
+                    </button>
+                  </div>
                 </td>
                 <td class="px-4 py-3 text-sm text-gray-600">
-                  <% if (item.imdb_id) { %>
-                    <a href="https://www.imdb.com/title/<%= item.imdb_id %>" target="_blank" class="text-blue-600 hover:underline">
-                      <%= item.imdb_id %>
-                    </a>
-                  <% } else { %>
-                    -
-                  <% } %>
+                  <div class="flex flex-col gap-1">
+                    <% if (item.imdb_id) { %>
+                      <a href="https://www.imdb.com/title/<%= item.imdb_id %>" target="_blank" class="text-blue-600 hover:underline">
+                        <%= item.imdb_id %>
+                      </a>
+                    <% } else { %>
+                      <span>-</span>
+                    <% } %>
+                    <button 
+                      onclick="overrideImdbId(<%= item.id %>)" 
+                      class="bg-indigo-500 hover:bg-indigo-600 text-white px-2 py-1 rounded text-xs w-fit"
+                      title="Override/Update IMDB ID (will persist)"
+                    >
+                      Override
+                    </button>
+                  </div>
                 </td>
                 <td class="px-4 py-3 text-sm">
                   <button 
-                    onclick="overrideTmdbId(<%= item.id %>)" 
-                    class="bg-purple-500 hover:bg-purple-600 text-white px-3 py-1 rounded text-xs"
-                    title="Override/Update TMDB ID (will persist)"
-                  >
-                    TMDB
-                  </button>
-                  <button 
-                    onclick="overrideImdbId(<%= item.id %>)" 
-                    class="bg-indigo-500 hover:bg-indigo-600 text-white px-3 py-1 rounded text-xs ml-2"
-                    title="Override/Update IMDB ID (will persist)"
-                  >
-                    IMDB
-                  </button>
-                  <button 
                     id="matchBtn<%= item.id %>"
                     onclick="matchItem(<%= item.id %>)" 
-                    class="bg-green-500 hover:bg-green-600 text-white px-3 py-1 rounded text-xs ml-2"
+                    class="bg-green-500 hover:bg-green-600 text-white px-3 py-1 rounded text-xs"
                   >
                     Match
                   </button>
