Fix: Use relative path for release-table include in movie-card partial

--- a/views/partials/dashboard/movie-card.ejs
+++ b/views/partials/dashboard/movie-card.ejs
@@ -131,7 +131,7 @@
 
       <!-- Release Table -->
       <div class="mt-3">
-        <%- include('partials/dashboard/release-table', { movie }) %>
+        <%- include('release-table', { movie }) %>
       </div>
     </div>
 
